# heimdallr

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/heimdallr/: __init__.py  bookmarks.py  cli.py  config.py  db.py  index.py  logging_config.py  models.py  query.py  search.py  settings.py
src/heimdallr/adapters/: __init__.py  base.py  claude.py  codex.py  registry.py
src/heimdallr/assets/: __init__.py
src/heimdallr/running/: __init__.py  detector.py  ide_activate.py  lockfiles.py  mtime_signal.py  pid_tracker.py  psutil_scan.py  resume_wrapper.sh  resume_wrapper_path.py  terminal.py
src/heimdallr/transfer/: __init__.py  compactor.py  injector.py
src/heimdallr/tui/: __init__.py  app.py  filter_bar.py  help_modal.py  logo.py  modal.py  preview.py  query.py  results_table.py  search_input.py  settings_modal.py  styles.py  transfer_modal.py  utils.py
tests/: conftest.py
tests/integration/: test_resume_wrapper.py
tests/unit/: test_adapters.py  test_app_smoke.py  test_index.py  test_preview.py  test_query.py  test_running.py  test_running_terminal.py  test_search_filter.py  test_settings.py  test_settings_modal.py  test_transfer.py
